--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     }
 
     body {
-      margin: 0;
+      margin: 0 auto;
+      max-width: 390px;
+      padding: 0 12px;
       font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
       background: #fff;
       color: #333;
@@ -20,19 +22,19 @@
     .header {
       position: relative;
       text-align: center;
-      padding: 10px 0 6px;
-      font-size: 17px;
+      padding: 10px 0;
+      font-size: 16px;
       font-weight: 500;
-      margin-bottom: 4px;
+      margin-bottom: 6px;
     }
 
     .back-arrow {
       position: absolute;
-      left: 16px;
+      left: 12px;
       top: 50%;
       transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
     }
 
     .tabs {
@@ -44,7 +46,7 @@
     .tab {
       flex: 1;
       text-align: center;
-      padding: 6px 0;
+      padding: 5px 0;
       font-size: 13px;
       font-weight: 500;
       color: #f44336;
@@ -78,11 +80,11 @@
     }
 
     .upload-btn {
-      padding: 8px 18px;
+      padding: 8px 20px;
       border: 2px solid #e65c43;
-      border-radius: 20px;
+      border-radius: 22px;
       color: #e65c43;
-      font-size: 15px;
+      font-size: 14px;
       background: none;
       cursor: pointer;
     }
@@ -92,18 +94,17 @@
     }
 
     .image-wrapper {
-      margin-top: 12px;
+      margin-top: 14px;
     }
 
     .image-wrapper img {
       width: 100%;
       height: auto;
       display: block;
-      border: none;
     }
 
     .content {
-      padding: 12px 12px 0;
+      padding: 14px 0;
     }
 
     .field-list {
@@ -116,15 +117,15 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 0;
+      padding: 8px 0;
       border-bottom: 1px solid #eee;
       color: #555;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     .field-item img {
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
       cursor: pointer;
     }
 
@@ -132,8 +133,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 12px 16px 16px;
-      gap: 10px;
+      padding: 12px;
+      gap: 8px;
+      margin-top: 0px;
     }
 
     .main-btn {
@@ -141,13 +143,12 @@
       color: white;
       border: none;
       padding: 12px;
-      font-size: 16px;
+      font-size: 15px;
       display: flex;
       align-items: center;
       justify-content: center;
       width: 100%;
-      max-width: 90%;
-      border-radius: 10px;
+      border-radius: 4px;
     }
 
     .main-btn img.qr-icon {
@@ -160,7 +161,7 @@
       background: none;
       color: #0288d1;
       border: none;
-      font-size: 15px;
+      font-size: 13px;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -170,20 +171,6 @@
       width: 18px;
       height: 18px;
       margin-right: 6px;
-    }
-
-    @media (min-width: 768px) {
-      body {
-        font-size: 16px;
-      }
-
-      .content {
-        padding: 20px 80px;
-      }
-
-      .main-btn {
-        max-width: 400px;
-      }
     }
   </style>
 </head>
@@ -216,7 +203,7 @@
   <!-- Content -->
   <div class="content">
     <div id="tab-doc" class="tab-content">
-      <!-- Контент вкладки "Документ" -->
+      <!-- Image or data -->
     </div>
 
     <div id="tab-info" class="tab-content hidden">
@@ -259,12 +246,10 @@
         } else {
           uploadBlock.classList.remove('hidden');
         }
-        imageWrapper.classList.remove('hidden'); // Показывать изображение
       } else {
         document.querySelector('.tab:last-child').classList.add('active');
         document.getElementById('tab-info').classList.remove('hidden');
         uploadBlock.classList.add('hidden');
-        imageWrapper.classList.add('hidden'); // Скрыть изображение
       }
     }
 
