--- a/index.html
+++ b/index.html
@@ -1,232 +1,245 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Удостоверение личности</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+  <!DOCTYPE html>
+  <html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <title>Удостоверение личности</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-    body {
-      margin: 0 auto;
-      max-width: 390px;
-      padding: 0 12px;
-      font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-      background: #fff;
-      color: #333;
-      font-size: 14px;
-    }
+      body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+        background: #f5f5f5;
+        color: #333;
+        font-size: 14px;
+      }
 
-    .header {
-      position: relative;
-      text-align: center;
-      padding: 10px 0;
-      font-size: 16px;
-      font-weight: 500;
-      margin-bottom: 6px;
-    }
+      .card-container {
+        max-width: 390px;
+        margin: 0 auto;
+        background-color: #ffffff;
+        border-radius: 16px;
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+        overflow: hidden;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
 
-    .back-arrow {
-      position: absolute;
-      left: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 18px;
-      height: 18px;
-    }
+      .header {
+        position: relative;
+        text-align: center;
+        padding: 12px 0;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 4px;
+      }
 
-    .tabs {
-      display: flex;
-      width: 100%;
-      padding-bottom: 4px;
-    }
+      .back-arrow {
+        position: absolute;
+        left: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 20px;
+        height: 20px;
+      }
 
-    .tab {
-      flex: 1;
-      text-align: center;
-      padding: 5px 0;
-      font-size: 13px;
-      font-weight: 500;
-      color: #f44336;
-      border: 1px solid #f44336;
-      background-color: white;
-      cursor: pointer;
-      border-right: none;
-    }
+      .tabs {
+        display: flex;
+        width: 100%;
+        padding: 0;
+      }
 
-    .tab:last-child {
-      border-right: 1px solid #f44336;
-    }
+      .tab {
+        flex: 1;
+        text-align: center;
+        padding: 8px 0;
+        font-size: 14px;
+        font-weight: 500;
+        color: #f44336;
+        border: 1px solid #f44336;
+        background-color: white;
+        cursor: pointer;
+        border-right: none;
+      }
 
-    .tab.active {
-      background-color: #f44336;
-      color: white;
-    }
+      .tab:last-child {
+        border-right: 1px solid #f44336;
+      }
 
-    .tab-line {
-      width: 100vw;
-      height: 2px;
-      background-color: #eee;
-      margin-top: 8px;
-      margin-left: calc(-1 * (100vw - 100%) / 2);
-    }
+      .tab.active {
+        background-color: #f44336;
+        color: white;
+      }
 
-    .upload-container {
-      display: flex;
-      justify-content: center;
-      margin: 16px 0 0;
-    }
+       .tab-line {
+        width: 100vw;
+        height: 2px;
+        background-color: #eee;
+        margin-top: 8px;
+        margin-left: calc(-1 * (100vw - 100%) / 2);
+      }
 
-    .upload-btn {
-      padding: 8px 20px;
-      border: 2px solid #e65c43;
-      border-radius: 22px;
-      color: #e65c43;
-      font-size: 14px;
-      background: none;
-      cursor: pointer;
-    }
+      .upload-container {
+        display: flex;
+        justify-content: center;
+        margin: 24px 0 0;
+      }
 
-    .hidden {
-      display: none;
-    }
+      .upload-btn {
+        padding: 12px 30px;
+        border: 2px solid #e65c43;
+        border-radius: 24px;
+        color: #e65c43;
+        font-size: 16px;
+        background: none;
+        cursor: pointer;
+      }
 
-    .image-wrapper {
-      margin-top: 14px;
-    }
+      .hidden {
+        display: none;
+      }
 
-    .image-wrapper img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+      .image-wrapper {
+        margin-top: 12px;
+        padding: 0 16px;
+      }
 
-    .content {
-      padding: 14px 0;
-    }
+      .image-wrapper img {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
 
-    .field-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+      .content {
+        padding: 12px 16px;
+        flex: 1;
+      }
 
-    .field-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 0;
-      border-bottom: 1px solid #eee;
-      color: #555;
-      font-size: 13px;
-    }
+      .field-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
 
-    .field-item img {
-      width: 18px;
-      height: 18px;
-      cursor: pointer;
-    }
+      .field-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+        border-bottom: 1px solid #eee;
+        color: #555;
+        font-size: 14px;
+      }
 
-    .bottom-buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 12px;
-      gap: 8px;
-      margin-top: 0px;
-    }
+      .field-item img {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+      }
 
-    .main-btn {
-      background-color: #0288d1;
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      border-radius: 4px;
-    }
+      .bottom-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 16px;
+        gap: 10px;
+      }
 
-    .main-btn img.qr-icon {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-    }
+      .main-btn {
+        background-color: #0288d1;
+        color: white;
+        border: none;
+        padding: 14px;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
+        border-radius: 8px;
+      }
 
-    .secondary-btn {
-      background: none;
-      color: #0288d1;
-      border: none;
-      font-size: 13px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-    }
+      .main-btn img.qr-icon {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+      }
 
-    .secondary-btn img {
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-    }
-  </style>
-</head>
-<body>
+      .secondary-btn {
+        background: none;
+        color: #0288d1;
+        border: none;
+        font-size: 14px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+      }
 
-  <!-- Header -->
-  <div class="header">
-    <img src="arrow.png" alt="Назад" class="back-arrow">
-    Удостоверение личности
-  </div>
+      .secondary-btn img {
+        width: 18px;
+        height: 18px;
+        margin-right: 6px;
+      }
+    </style>
+  </head>
+  <body>
 
-  <!-- Tabs -->
-  <div class="tabs">
-    <div class="tab active" onclick="showTab('doc')">Документ</div>
-    <div class="tab" onclick="showTab('info')">Реквизиты</div>
-  </div>
-  <div class="tab-line"></div>
-
-  <!-- Upload -->
-  <div class="upload-container" id="uploadBlock">
-    <label for="fileInput" class="upload-btn">Загрузить</label>
-    <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
-  </div>
-
-  <!-- Image -->
-  <div class="image-wrapper hidden" id="imageWrapper">
-    <img id="uploadedImage" src="" alt="Загруженный документ">
-  </div>
-
-  <!-- Content -->
-  <div class="content">
-    <div id="tab-doc" class="tab-content">
-      <!-- Image or data -->
+  <div class="card-container">
+    <!-- Header -->
+    <div class="header">
+      <img src="arrow.png" alt="Назад" class="back-arrow">
+      Удостоверение личности
     </div>
 
-    <div id="tab-info" class="tab-content hidden">
-      <ul class="field-list">
-        <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
-        <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
-      </ul>
+    <!-- Tabs -->
+    <div class="tabs">
+      <div class="tab active" onclick="showTab('doc')">Документ</div>
+      <div class="tab" onclick="showTab('info')">Реквизиты</div>
     </div>
-  </div>
+    <div class="tab-line"></div>
 
-  <!-- Bottom buttons -->
-  <div class="bottom-buttons">
-    <button class="main-btn">
-      <img src="qr.png" alt="QR" class="qr-icon">
-      Предъявить документ
-    </button>
-    <button class="secondary-btn">
-      <img src="upload.png" alt="Upload">
-      Отправить документ
-    </button>
+    <!-- Upload -->
+    <div class="upload-container" id="uploadBlock">
+      <label for="fileInput" class="upload-btn">Загрузить</label>
+      <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
+    </div>
+
+    <!-- Image -->
+    <div class="image-wrapper hidden" id="imageWrapper">
+      <img id="uploadedImage" src="" alt="Загруженный документ">
+    </div>
+
+    <!-- Content -->
+    <div class="content">
+      <div id="tab-doc" class="tab-content">
+        <!-- Здесь будет отображаться изображение -->
+      </div>
+
+      <div id="tab-info" class="tab-content hidden">
+        <ul class="field-list">
+          <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
+          <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
+          <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
+          <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
+          <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Bottom buttons -->
+    <div class="bottom-buttons">
+      <button class="main-btn">
+        <img src="qr.png" alt="QR" class="qr-icon">
+        Предъявить документ
+      </button>
+      <button class="secondary-btn">
+        <img src="upload.png" alt="Upload">
+        Отправить документ
+      </button>
+    </div>
   </div>
 
   <!-- Script -->
@@ -243,13 +256,16 @@
         document.getElementById('tab-doc').classList.remove('hidden');
         if (!imageWrapper.classList.contains('hidden')) {
           uploadBlock.classList.add('hidden');
+          imageWrapper.classList.remove('hidden');
         } else {
           uploadBlock.classList.remove('hidden');
+          imageWrapper.classList.add('hidden');
         }
       } else {
         document.querySelector('.tab:last-child').classList.add('active');
         document.getElementById('tab-info').classList.remove('hidden');
         uploadBlock.classList.add('hidden');
+        imageWrapper.classList.add('hidden'); // скрываем изображение
       }
     }
 
@@ -268,5 +284,5 @@
     }
   </script>
 
-</body>
-</html>
+  </body>
+  </html>
