--- a/index.html
+++ b/index.html
@@ -1,271 +1,276 @@
-  <!DOCTYPE html>
-  <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Удостоверение личности</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      * {
-        box-sizing: border-box;
-      }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Удостоверение личности</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Подключение Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: #fff;
+      color: #333;
+      font-size: 14px;
+    }
+
+    .header {
+      position: relative;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 17px;
+      font-weight: 500;
+      margin-bottom: 8px;
+    }
+
+    .back-arrow {
+      position: absolute;
+      left: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+    }
+
+    .tabs {
+      display: flex;
+      width: 100%;
+      padding: 0 16px;
+      margin-bottom: 0;
+    }
+
+    .tab {
+      flex: 1;
+      text-align: center;
+      padding: 8px 0;
+      font-size: 14px;
+      font-weight: 500;
+      color: #f44336;
+      border: 1px solid #f44336;
+      background-color: #fff;
+      cursor: pointer;
+      border-right: none;
+    }
+
+    .tab:last-child {
+      border-right: 1px solid #f44336;
+    }
+
+    .tab.active {
+      background-color: #f44336;
+      color: #fff;
+    }
+
+     .tab-line {
+      width: 100vw;
+      height: 2px;
+      background-color: #eee;
+      margin-top: 8px;
+      margin-left: calc(-1 * (100vw - 100%) / 2);
+    }
+
+    .upload-container {
+      display: flex;
+      justify-content: center;
+      margin: 20px 0 0;
+    }
+
+    .upload-btn {
+      padding: 10px 22px;
+      border: 2px solid #e65c43;
+      border-radius: 24px;
+      color: #e65c43;
+      font-size: 16px;
+      background: none;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none !important;
+    }
+
+    .image-wrapper {
+      margin-top: 0px;
+      padding: 0 16px;
+    }
+
+    .image-wrapper img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 0;
+    }
+
+    .content {
+      padding: 0 0;
+      margin-top: 0;
+    }
+
+    .field-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .field-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0;
+      border-bottom: 1px solid #eee;
+      color: #555;
+      font-size: 14px;
+    }
+
+    .field-item img {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
+
+    .bottom-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 16px;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .main-btn {
+      background-color: #1a90d9;
+      color: white;
+      border: none;
+      padding: 14px 24px;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 90%;
+      border-radius: 10px;
+    }
+
+    .main-btn img.qr-icon {
+      width: 22px;
+      height: 22px;
+      margin-right: 8px;
+    }
+
+    .secondary-btn {
+      background: none;
+      color: #1a90d9;
+      border: none;
+      font-size: 16px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+    }
+
+    .secondary-btn img {
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+    }
+
+    @media (min-width: 768px) {
       body {
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-        background: #f5f5f5;
-        color: #333;
-        font-size: 14px;
-      }
-
-      .card-container {
-        max-width: 390px;
-        margin: 0 auto;
-        background-color: #ffffff;
-        border-radius: 16px;
-        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
-        overflow: hidden;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .header {
-        position: relative;
-        text-align: center;
-        padding: 12px 0;
-        font-size: 18px;
-        font-weight: 500;
-        margin-bottom: 4px;
-      }
-
-      .back-arrow {
-        position: absolute;
-        left: 16px;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 20px;
-        height: 20px;
-      }
-
-      .tabs {
-        display: flex;
-        width: 100%;
-        padding: 0;
-      }
-
-      .tab {
-        flex: 1;
-        text-align: center;
-        padding: 8px 0;
-        font-size: 14px;
-        font-weight: 500;
-        color: #f44336;
-        border: 1px solid #f44336;
-        background-color: white;
-        cursor: pointer;
-        border-right: none;
-      }
-
-      .tab:last-child {
-        border-right: 1px solid #f44336;
-      }
-
-      .tab.active {
-        background-color: #f44336;
-        color: white;
-      }
-
-       .tab-line {
-        width: 100vw;
-        height: 2px;
-        background-color: #eee;
-        margin-top: 8px;
-        margin-left: calc(-1 * (100vw - 100%) / 2);
-      }
-
-      .upload-container {
-        display: flex;
-        justify-content: center;
-        margin: 24px 0 0;
-      }
-
-      .upload-btn {
-        padding: 12px 30px;
-        border: 2px solid #e65c43;
-        border-radius: 24px;
-        color: #e65c43;
         font-size: 16px;
-        background: none;
-        cursor: pointer;
-      }
-
-      .hidden {
-        display: none;
-      }
-
-      .image-wrapper {
-        margin-top: 12px;
-        padding: 0 16px;
-      }
-
-      .image-wrapper img {
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-
-      .content {
-        padding: 12px 16px;
-        flex: 1;
-      }
-
-      .field-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      .field-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 0;
-        border-bottom: 1px solid #eee;
-        color: #555;
-        font-size: 14px;
-      }
-
-      .field-item img {
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
-
-      .bottom-buttons {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 16px;
-        gap: 10px;
       }
 
       .main-btn {
-        background-color: #0288d1;
-        color: white;
-        border: none;
-        padding: 14px;
-        font-size: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 90%;
-        border-radius: 8px;
+        max-width: 400px;
       }
+    }
+  </style>
+</head>
+<body>
 
-      .main-btn img.qr-icon {
-        width: 20px;
-        height: 20px;
-        margin-right: 8px;
-      }
+  <!-- Header -->
+  <div class="header">
+    <img src="arrow.png" alt="Назад" class="back-arrow">
+    Удостоверение личности
+  </div>
 
-      .secondary-btn {
-        background: none;
-        color: #0288d1;
-        border: none;
-        font-size: 14px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-      }
+  <!-- Tabs -->
+  <div class="tabs">
+    <div class="tab active" onclick="showTab('doc')">Документ</div>
+    <div class="tab" onclick="showTab('info')">Реквизиты</div>
+  </div>
+  <div class="tab-line"></div>
 
-      .secondary-btn img {
-        width: 18px;
-        height: 18px;
-        margin-right: 6px;
-      }
-    </style>
-  </head>
-  <body>
+  <!-- Upload -->
+  <div class="upload-container" id="uploadBlock">
+    <label for="fileInput" class="upload-btn">Загрузить</label>
+    <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
+  </div>
 
-  <div class="card-container">
-    <!-- Header -->
-    <div class="header">
-      <img src="arrow.png" alt="Назад" class="back-arrow">
-      Удостоверение личности
+  <!-- Image -->
+  <div class="image-wrapper hidden" id="imageWrapper">
+    <img id="uploadedImage" src="" alt="Загруженный документ">
+  </div>
+
+  <!-- Content -->
+  <div class="content">
+    <div id="tab-doc" class="tab-content">
+      <!-- Здесь отображается только изображение -->
     </div>
 
-    <!-- Tabs -->
-    <div class="tabs">
-      <div class="tab active" onclick="showTab('doc')">Документ</div>
-      <div class="tab" onclick="showTab('info')">Реквизиты</div>
+    <div id="tab-info" class="tab-content hidden">
+      <ul class="field-list">
+        <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
+        <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
+      </ul>
     </div>
-    <div class="tab-line"></div>
+  </div>
 
-    <!-- Upload -->
-    <div class="upload-container" id="uploadBlock">
-      <label for="fileInput" class="upload-btn">Загрузить</label>
-      <input id="fileInput" type="file" accept="image/*" class="hidden" onchange="handleUpload(this)">
-    </div>
-
-    <!-- Image -->
-    <div class="image-wrapper hidden" id="imageWrapper">
-      <img id="uploadedImage" src="" alt="Загруженный документ">
-    </div>
-
-    <!-- Content -->
-    <div class="content">
-      <div id="tab-doc" class="tab-content">
-        <!-- Здесь будет отображаться изображение -->
-      </div>
-
-      <div id="tab-info" class="tab-content hidden">
-        <ul class="field-list">
-          <li class="field-item">ФИО <img src="copy.png" alt="Копировать"></li>
-          <li class="field-item">ИИН <img src="copy.png" alt="Копировать"></li>
-          <li class="field-item">Дата рождения <img src="copy.png" alt="Копировать"></li>
-          <li class="field-item">Номер документа <img src="copy.png" alt="Копировать"></li>
-          <li class="field-item">Дата выдачи <img src="copy.png" alt="Копировать"></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Bottom buttons -->
-    <div class="bottom-buttons">
-      <button class="main-btn">
-        <img src="qr.png" alt="QR" class="qr-icon">
-        Предъявить документ
-      </button>
-      <button class="secondary-btn">
-        <img src="upload.png" alt="Upload">
-        Отправить документ
-      </button>
-    </div>
+  <!-- Bottom buttons -->
+  <div class="bottom-buttons">
+    <button class="main-btn">
+      <img src="qr.png" alt="QR" class="qr-icon">
+      Предъявить документ
+    </button>
+    <button class="secondary-btn">
+      <img src="upload.png" alt="Upload">
+      Отправить документ
+    </button>
   </div>
 
   <!-- Script -->
   <script>
     function showTab(name) {
-      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-      document.querySelectorAll('.tab-content').forEach(content => content.classList.add('hidden'));
-
-      const uploadBlock = document.getElementById('uploadBlock');
+      const tabs = document.querySelectorAll('.tab');
+      const contents = document.querySelectorAll('.tab-content');
       const imageWrapper = document.getElementById('imageWrapper');
+      const uploadBlock = document.getElementById('uploadBlock');
+
+      tabs.forEach(t => t.classList.remove('active'));
+      contents.forEach(c => c.classList.add('hidden'));
 
       if (name === 'doc') {
-        document.querySelector('.tab:first-child').classList.add('active');
+        tabs[0].classList.add('active');
         document.getElementById('tab-doc').classList.remove('hidden');
-        if (!imageWrapper.classList.contains('hidden')) {
-          uploadBlock.classList.add('hidden');
+        if (imageWrapper.querySelector('img').src) {
           imageWrapper.classList.remove('hidden');
+          uploadBlock.classList.add('hidden');
         } else {
           uploadBlock.classList.remove('hidden');
           imageWrapper.classList.add('hidden');
         }
       } else {
-        document.querySelector('.tab:last-child').classList.add('active');
+        tabs[1].classList.add('active');
         document.getElementById('tab-info').classList.remove('hidden');
+        imageWrapper.classList.add('hidden');
         uploadBlock.classList.add('hidden');
-        imageWrapper.classList.add('hidden'); // скрываем изображение
       }
     }
 
@@ -284,5 +289,5 @@
     }
   </script>
 
-  </body>
-  </html>
+</body>
+</html>
