--- a/index.html
+++ b/index.html
@@ -253,94 +253,147 @@
   </div>
 
   <!-- Script -->
-  <script>
-    function showTab(name) {
-      const tabs = document.querySelectorAll('.tab');
-      const contents = document.querySelectorAll('.tab-content');
-      const imageWrapper = document.getElementById('imageWrapper');
-      const uploadBlock = document.getElementById('uploadBlock');
+<script>
+  function showTab(name) {
+    const tabs = document.querySelectorAll('.tab');
+    const contents = document.querySelectorAll('.tab-content');
+    const imageWrapper = document.getElementById('imageWrapper');
+    const uploadBlock = document.getElementById('uploadBlock');
 
-      tabs.forEach(t => t.classList.remove('active'));
-      contents.forEach(c => c.classList.add('hidden'));
+    tabs.forEach(t => t.classList.remove('active'));
+    contents.forEach(c => c.classList.add('hidden'));
 
-      if (name === 'doc') {
-        tabs[0].classList.add('active');
-        document.getElementById('tab-doc').classList.remove('hidden');
-        if (document.getElementById('uploadedImage').src) {
-          imageWrapper.classList.remove('hidden');
-          uploadBlock.classList.add('hidden');
-        } else {
-          uploadBlock.classList.remove('hidden');
-          imageWrapper.classList.add('hidden');
-        }
-      } else {
-        tabs[1].classList.add('active');
-        document.getElementById('tab-info').classList.remove('hidden');
-        imageWrapper.classList.add('hidden');
+    if (name === 'doc') {
+      tabs[0].classList.add('active');
+      document.getElementById('tab-doc').classList.remove('hidden');
+      if (document.getElementById('uploadedImage').src) {
+        imageWrapper.classList.remove('hidden');
         uploadBlock.classList.add('hidden');
+      } else {
+        uploadBlock.classList.remove('hidden');
+        imageWrapper.classList.add('hidden');
       }
+    } else {
+      tabs[1].classList.add('active');
+      document.getElementById('tab-info').classList.remove('hidden');
+      imageWrapper.classList.add('hidden');
+      uploadBlock.classList.add('hidden');
     }
+  }
 
-    function handleUpload(input) {
-      const file = input.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          const img = document.getElementById('uploadedImage');
-          img.src = e.target.result;
-          document.getElementById('imageWrapper').classList.remove('hidden');
-          document.getElementById('uploadBlock').classList.add('hidden');
-          scale = 1;
-          updateZoom();
-        };
-        reader.readAsDataURL(file);
-      }
+  function handleUpload(input) {
+    const file = input.files[0];
+    if (file) {
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        const img = document.getElementById('uploadedImage');
+        img.src = e.target.result;
+        document.getElementById('imageWrapper').classList.remove('hidden');
+        document.getElementById('uploadBlock').classList.add('hidden');
+        resetZoom();
+      };
+      reader.readAsDataURL(file);
     }
+  }
 
-    // Зум
-    let scale = 1;
-    const img = document.getElementById('uploadedImage');
-    const zoomContainer = document.getElementById('zoomContainer');
+  const zoomContainer = document.getElementById('zoomContainer');
+  const img = document.getElementById('uploadedImage');
 
-    function updateZoom() {
-      img.style.transform = `scale(${scale})`;
+  let scale = 1;
+  let translateX = 0;
+  let translateY = 0;
+  let startX = 0;
+  let startY = 0;
+  let isDragging = false;
+
+  function updateTransform() {
+    img.style.transform = `translate(${translateX}px, ${translateY}px) scale(${scale})`;
+  }
+
+  function resetZoom() {
+    scale = 1;
+    translateX = 0;
+    translateY = 0;
+    updateTransform();
+  }
+
+  zoomContainer?.addEventListener('wheel', function (e) {
+    e.preventDefault();
+    const delta = e.deltaY * -0.001;
+    const prevScale = scale;
+    scale = Math.min(Math.max(1, scale + delta), 4);
+    const rect = img.getBoundingClientRect();
+    const offsetX = e.clientX - rect.left;
+    const offsetY = e.clientY - rect.top;
+
+    const dx = offsetX - rect.width / 2;
+    const dy = offsetY - rect.height / 2;
+
+    translateX -= dx * (scale - prevScale) / scale;
+    translateY -= dy * (scale - prevScale) / scale;
+
+    updateTransform();
+  }, { passive: false });
+
+  zoomContainer?.addEventListener('mousedown', function (e) {
+    if (scale > 1) {
+      isDragging = true;
+      startX = e.clientX - translateX;
+      startY = e.clientY - translateY;
     }
+  });
 
-    zoomContainer?.addEventListener('wheel', function (e) {
+  window.addEventListener('mouseup', () => isDragging = false);
+
+  window.addEventListener('mousemove', function (e) {
+    if (isDragging) {
+      translateX = e.clientX - startX;
+      translateY = e.clientY - startY;
+      updateTransform();
+    }
+  });
+
+  // Touch support
+  let startDist = 0;
+
+  zoomContainer?.addEventListener('touchstart', function (e) {
+    if (e.touches.length === 2) {
+      startDist = getDistance(e.touches[0], e.touches[1]);
+    } else if (e.touches.length === 1 && scale > 1) {
+      isDragging = true;
+      startX = e.touches[0].clientX - translateX;
+      startY = e.touches[0].clientY - translateY;
+    }
+  });
+
+  zoomContainer?.addEventListener('touchmove', function (e) {
+    if (e.touches.length === 2) {
       e.preventDefault();
-      scale += e.deltaY * -0.001;
-      scale = Math.min(Math.max(1, scale), 4); // ограничим от 1x до 4x
-      updateZoom();
-    }, { passive: false });
-
-    let startDist = 0;
-
-    zoomContainer?.addEventListener('touchstart', function (e) {
-      if (e.touches.length === 2) {
-        startDist = getDistance(e.touches[0], e.touches[1]);
-      }
-    });
-
-    zoomContainer?.addEventListener('touchmove', function (e) {
-      if (e.touches.length === 2) {
-        e.preventDefault();
-        const currentDist = getDistance(e.touches[0], e.touches[1]);
-        if (startDist > 0) {
-          const delta = currentDist - startDist;
-          scale += delta * 0.005;
-          scale = Math.min(Math.max(1, scale), 4);
-          updateZoom();
-          startDist = currentDist;
-        }
-      }
-    }, { passive: false });
-
-    function getDistance(touch1, touch2) {
-      const dx = touch2.clientX - touch1.clientX;
-      const dy = touch2.clientY - touch1.clientY;
-      return Math.sqrt(dx * dx + dy * dy);
+      const currentDist = getDistance(e.touches[0], e.touches[1]);
+      const delta = currentDist - startDist;
+      scale += delta * 0.005;
+      scale = Math.min(Math.max(1, scale), 4);
+      startDist = currentDist;
+      updateTransform();
+    } else if (e.touches.length === 1 && isDragging) {
+      translateX = e.touches[0].clientX - startX;
+      translateY = e.touches[0].clientY - startY;
+      updateTransform();
     }
-  </script>
+  }, { passive: false });
+
+  zoomContainer?.addEventListener('touchend', function (e) {
+    if (e.touches.length < 2) {
+      isDragging = false;
+    }
+  });
+
+  function getDistance(t1, t2) {
+    const dx = t2.clientX - t1.clientX;
+    const dy = t2.clientY - t1.clientY;
+    return Math.sqrt(dx * dx + dy * dy);
+  }
+</script>
 
 </body>
 </html>
